fix overflow in widget title

--- a/src/css/widget.css
+++ b/src/css/widget.css
@@ -17,6 +17,8 @@
   justify-content: center;
   font-size: 16px;
   text-decoration: underline;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .links {
